[package]
name = "rust-gossip-gloomers"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full", "macros"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.19.0", features = ["v4"] }

[lib]
name = "maelstrom"
path = "src/lib/lib.rs"
